Article Border Update
Added a border that i forgot

--- a/styles2.css
+++ b/styles2.css
@@ -113,6 +113,22 @@ a {
   padding-bottom: 2vh;
 }
 
+#secondart {
+  border-top: double;
+  border-bottom: double;
+  border-color: orange;
+  margin-top: 2vh;
+  padding-bottom: 2vh;
+}
+
+#thirdart {
+  border-top: double;
+  border-bottom: double;
+  border-color: purple;
+  margin-top: 2vh;
+  padding-bottom: 2vh;
+}
+
 .skelly {
   border: solid;
   margin: auto;
