New article update!
I added a article for 27th of august, enjoy future, current and me to see.

--- a/styles2.css
+++ b/styles2.css
@@ -145,6 +145,14 @@ a {
   padding-bottom: 2vh;
 }
 
+#fourthart {
+  border-top: double;
+  border-bottom: double;
+  border-color: yellow;
+  margin-top: 2vh;
+  padding-bottom: 2vh;
+}
+
 .skelly {
   border: solid;
   margin: auto;
