--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+
 :root {
   --black: #000000;
   --white: #ffffff;
@@ -7,6 +8,7 @@
 
 * {
      text-shadow: 0 0 5px var(--lime);
+     font-size: 1.1rem;
 }
 
 body {
@@ -25,6 +27,8 @@ h1, h2, h3, h4 {
   text-align: center;
   margin: auto;
 }
+
+
 
 .titlesize {
   font-size: 3rem;
